# mlvoqc

./: .gitmodules  API.md  CHANGES.md  Makefile  README.md  dune  dune-project  example.ml  mapper_test.ml  mapping_experiment.ml  voqc.opam  voqc_cli.ml
benchmarks/: README.md  create_tables.py  parseOutput.py  run_pyzx.py  run_qiskit.py  run_tket.py  run_voqc.sh  run_voqc_artifact.sh  run_voqc_partial.sh  validate_outputs.sh
extraction/: Extraction.v  extract.sh
ml/: Qasm.ml  Qasm.mli  Voqc.ml
ml/extracted/: BinInt.ml  CXCancellation.mli  ChangeRotationBasis.mli  ConnectivityGraph.ml  ConnectivityGraph.mli  FullGateSet.ml  FullGateSet.mli  GateCancellation.mli  GreedyLayout.ml  HadamardReduction.mli  IBMGateSet.mli  Layouts.ml  Layouts.mli  Main.ml  Main.mli  Mapper.ml  MappingGateSet.ml  MappingValidation.ml  NotPropagation.mli  Optimize1qGates.mli  PeanoNat.ml  RotationMerging.mli  SimpleMapping.mli  StandardGateSet.mli  SwapRoute.ml  UnitaryListRepresentation.ml  UnitaryListRepresentation.mli
