(executable
  (name voqc_cli)
  (modules voqc_cli)
  (libraries voqc))
  
(executable
  (name mapping_experiment)
  (modules mapping_experiment)
  (libraries voqc))

(executable
  (name mapper_test)
  (modules mapper_test)
  (libraries voqc str))

(executable
  (name run_vqo)
  (modules run_vqo)
  (libraries voqc))